# webhook

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: handlers.rs  main.rs  requests.rs  responses.rs  structures.rs  utils.rs
src/handlers/: email.rs  push.rs
