[package]
name = "webhook"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.1"
lettre = { version = "0.11.1", features = ["rustls-tls"] }
log = "0.4.20"
pico-args = { version = "0.5.0", features = ["short-space-opt"] }
serde = { version = "1.0.193", features = ["derive"] }
